--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,35 @@
-.DS_Store
-node_modules
-/dist
+# dependencies
+node_modules/
+.pnp/
+.pnp.js
+
+# testing
+coverage/
 
 # local env files
 .env.local
 .env.*.local
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# production
+lib/
+dist/
+build/
+.cache/
+.vite/
+
+# misc
+.DS_Store
 
 # Editor directories and files
-.idea
-.vscode
+.idea/
+.vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw*
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
