--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "printWidth": 100,
   "singleQuote": true,
-  "useTabs": false,
+  "useTabs": true,
   "semi": false,
   "tabWidth": 2,
   "trailingComma": "none",
