--- a/package.json
+++ b/package.json
@@ -6,25 +6,35 @@
     "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint . --ext .js --ext .vue --quiet --fix",
-    "prebuild": "rimraf lib"
+    "type-check": "tsc --pretty --noEmit"
   },
   "dependencies": {
-    "vue": "^2.6.14"
+    "@types/jest": "^28.1.4",
+    "@vue/compiler-dom": "^3.2.37",
+    "pinia": "^2.0.14",
+    "vue": "^2.7.0",
+    "vue-router": "^3.5.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.14.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-prettier-vue": "^2.1.1",
-    "eslint-plugin-vue": "^6.x",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.6",
-    "sass-loader": "7.3.1",
-    "source-map-explorer": "^2.5.2",
-    "vite": "^2.2.1",
-    "vite-plugin-vue2": "^1.9.0",
-    "vue-router": "^3.5.2",
-    "vue-template-compiler": "^2.6.14"
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
+    "@vitejs/plugin-vue2": "^1.1.2",
+    "@vue/eslint-config-standard": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.1.1",
+    "jsdom": "^20.0.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4",
+    "vite": "^2.9.13",
+    "vue-template-compiler": "^2.7.0"
   }
 }
