--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "eslint-plugin-vue": "^9.1.1",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
-    "vite": "^2.9.13",
-    "vue-template-compiler": "^2.7.0"
+    "vite": "^2.9.13"
   }
 }
