--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint . --ext .js --ext .vue --quiet --fix",
-    "type-check": "tsc --pretty --noEmit",
-    "prepare": "husky install"
+    "type-check": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "pinia": "^2.0.14",
