Add unit test support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "./",
     "target": "ESNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "types": ["vite/client", "jest"],
+    "types": ["vite/client", "jest", "node"],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
