--- a/package.json
+++ b/package.json
@@ -5,22 +5,33 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
+    "test": "jest",
+    "cov": "jest --coverage",
     "lint": "eslint . --ext .js --ext .vue --quiet --fix",
     "type-check": "tsc --pretty --noEmit"
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "dependencies": {
     "pinia": "^2.0.14",
-    "vue": "^2.7.4",
+    "vue": "^2.7.5",
     "vue-router": "3.5.4",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
     "@vitejs/plugin-vue2": "^1.1.2",
     "@vue/eslint-config-standard": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/test-utils": "^1.3.0",
+    "@vue/vue2-jest": "https://gitpkg.now.sh/FelixGraf/vue-jest/packages/vue2-jest?master",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -29,15 +40,36 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.1.1",
     "husky": "^8.0.1",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.7.4",
-    "vite": "^2.9.13"
+    "vite": "^2.9.13",
+    "vue-template-compiler": "^2.7.5"
   },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,vue}": [
-      "eslint --fix",
-      "git add"
+  "jest": {
+    "testEnvironment": "jsdom",
+    "testEnvironmentOptions": {
+      "customExportConditions": [
+        "node",
+        "node-addons"
+      ]
+    },
+    "transform": {
+      "^.+.ts$": "ts-jest",
+      "^.+.vue$": "@vue/vue2-jest"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "ts",
+      "vue",
+      "json"
+    ],
+    "testMatch": [
+      "**/test/**/*.ts",
+      "**/__tests__/**/*.spec.ts"
     ]
   }
 }
