--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
   },
   "dependencies": {
     "pinia": "^2.0.14",
-    "vue": "^2.7.5",
-    "vue-router": "3.5.4",
-    "vuex": "^4.0.2"
+    "vue": "^2.7.6",
+    "vue-router": "3.5.4"
   },
   "devDependencies": {
     "@types/jest": "^28.1.4",
@@ -29,7 +28,7 @@
     "@vitejs/plugin-vue2": "^1.1.2",
     "@vue/eslint-config-standard": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^1.3.0",
+    "@vue/test-utils": "1.3.0",
     "@vue/vue2-jest": "https://gitpkg.now.sh/FelixGraf/vue-jest/packages/vue2-jest?master",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
@@ -46,7 +45,7 @@
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.4",
     "vite": "^2.9.13",
-    "vue-template-compiler": "^2.7.5"
+    "vue-template-compiler": "2.7.6"
   },
   "jest": {
     "testEnvironment": "jsdom",
